# real-estate-mcp

./: .coverage  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README-ko.md  README.md  pyproject.toml  run.bat
.claude/: settings.json
.claude/agents/: README.md  adr.md  progress-guardian.md
.claude/rules/: coding-guidelines.md  document-management.md  thinking-guidelines.md
.claude/skills.nouse/codex/: SKILL.md
.claude/skills.nouse/next/: SKILL.md
.claude/skills.nouse/openapi-to-application-code/: SKILL.md
.claude/skills.nouse/python-mcp-server-generator/: SKILL.md
.claude/skills.nouse/status/: SKILL.md
.claude/skills/api-architect/: SKILL.md
.claude/skills/check/: SKILL.md
.claude/skills/codex/: SKILL.md
.moai/: manifest.json
.moai/project/: product.md  structure.md  tech.md
.moai/reports/: sync-report-20260227.md
docker/: Caddyfile  Dockerfile  Dockerfile.auth  docker-compose.yml
docs/: guide-common-utils.md  prompt.custom-instructions-ko.md  setup-chatgpt-web.md  setup-claude-cli.md  setup-claude-desktop.md  setup-claude-web.md  setup-codex-cli.md  setup-docker.md  setup-oauth.md  work-summary-2026-02-20.md
resources/: custom-instructions-ko.md
scripts/: docx_to_txt.py
src/real_estate/: cache_manager.py  config_validator.py
tests/: conftest.py  test_config_validator.py
tests/auth/: test_auth_server.py
tests/common_utils/: test_docx_parser.py
tests/config/: __init__.py  test_config_edge_cases.py
tests/integration/: __init__.py  test_integration_rent.py  test_integration_trade.py
tests/mcp_server/: test_apartment_rent.py  test_apartment_trades.py  test_cache_manager.py  test_commercial_trade.py  test_error_types.py  test_financial_tools.py  test_helpers.py  test_officetel_trades.py  test_onbid_code_lookup.py  test_onbid_extra.py  test_public_auction_items.py  test_region_code.py  test_server_cli.py  test_subscription.py  test_villa_single_house.py
tests/parsers/: __init__.py  test_parser_onbid.py  test_parser_rent.py  test_parser_trade.py
(+61 files in other folders)
